<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActsSections" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="Section1"      
                android:text="@string/b1" 
                android:gravity="left"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="left"
                android:onClick="Section2"
                android:text="@string/b2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section3" 
                android:text="@string/b3"
                android:gravity="left" />
            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section4" 
                android:text="@string/b4"
                android:gravity="left" />
            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section5" 
                android:text="@string/b5" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section6" 
                android:text="@string/b6" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section7" 
                android:text="@string/b7" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section8" 
                android:text="@string/b8" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section9" 
                android:text="@string/b9"
                android:gravity="left" />
            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section10" 
                android:text="@string/b10" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section11" 
                android:text="@string/b11" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section12" 
                android:text="@string/b12" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section13" 
                android:text="@string/b13"
                android:gravity="left" />
            <Button
                android:id="@+id/button14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section14" 
                android:text="@string/b14" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button15"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section15" 
                android:text="@string/b15" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section16" 
                android:text="@string/b16" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button17"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section17" 
                android:text="@string/b17" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section18" 
                android:text="@string/b18"
                android:gravity="left" />
            <Button
                android:id="@+id/button19"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section19" 
                android:text="@string/b19" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section20" 
                android:text="@string/b20"
                android:gravity="left" />
            <Button
                android:id="@+id/button21"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section21" 
                android:text="@string/b21" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section22" 
                android:text="@string/b22" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button23"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section23" 
                android:text="@string/b23" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button24"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section24" 
                android:text="@string/b24"
                android:gravity="left" />
            <Button
                android:id="@+id/button25"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section25" 
                android:text="@string/b25" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button26"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section26" 
                android:text="@string/b26"
                android:gravity="left" />
            <Button
                android:id="@+id/button27"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section27" 
                android:text="@string/b27"
                android:gravity="left" />
            <Button
                android:id="@+id/button28"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section28" 
                android:text="@string/b28" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button29"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section29" 
                android:text="@string/b29"
                android:gravity="left" />
            <Button
                android:id="@+id/button30"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section30" 
                android:text="@string/b30" 
                android:gravity="left"/>
            <Button
                android:id="@+id/button31"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section31" 
                android:text="@string/b31"
                android:gravity="left" />
            <Button
                android:id="@+id/button32"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section32" 
                android:text="@string/b32"
                android:gravity="left" />
            <Button
                android:id="@+id/button33"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section33" 
                android:text="@string/b33"
                android:gravity="left" />
            <Button
                android:id="@+id/button34"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
        		android:onClick="Section34" 
                android:text="@string/b34"
                android:gravity="left" />
        </LinearLayout>
    </ScrollView>
   
</RelativeLayout>

